--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="launcher_name">Luts</string>
     <string name="lut_explorer">Lut Explorer</string>
     <string name="set_reference_image">Set reference image</string>
+    <string name="column_toggle">Column toggle</string>
 </resources>
