prev/next buttons visibility

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="lut_explorer">Lut Explorer</string>
     <string name="set_reference_image">Set reference image</string>
     <string name="column_toggle">Column toggle</string>
+    <string name="about">About</string>
 </resources>
